- Added ContactAddresses and ContactPhones to  Contact mapping